--- a/style.css
+++ b/style.css
@@ -10,17 +10,18 @@
     margin: 0;
     padding: 0;     
     box-sizing: border-box;
-    font-family: Reboto, sans-serif;
+    font-family: Roboto, sans-serif;
 }
 
 body{
-    height: 100vh;
+    min-height: 100vh;
     width: 100vw;
     background-color: var(--cor-fundo);
     display: flex;
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    padding: 20px;
 }
 
 .principalText{
@@ -32,13 +33,14 @@ body{
 }
 
 img{
-    height: 50px;
+    max-width: 100%;
+    height: auto;
 }
 
 h1{
     color: var(--cor-fonte);
     font-weight: 600;
-    font-size: 1.2em;
+    font-size: 1.5em;
     margin-top: 8px;
 }
 
@@ -46,11 +48,11 @@ select{
     cursor: pointer; 
     appearance: none;
     min-width: 200px;
-    height: 30px;
+    height: 40px;
     background-color: var(--cor-selection);
     border: 1px solid var(--cor-fonte);
     border-radius: 10px;
-    font-size: 12px;
+    font-size: 14px;
     padding-left: 10px;
     margin-bottom: 20px;   
 }
@@ -69,7 +71,7 @@ textarea {
     border: 1px solid var(--cor-fonte);
     border-radius: 5px;
     font-family: 'Roboto', sans-serif; 
-    font-size: 12px;
+    font-size: 14px;
     resize: vertical;
     overflow: auto;
     resize: none;
@@ -89,22 +91,16 @@ textarea {
     border-radius: 5px;
 }
 
-@media (min-width: 576px) {
+@media only screen and (max-width: 576px) {
+    body {
+        padding: 10px; 
+    }
+
     h1 {
-        font-size: 1.8em;
+        font-size: 1.2em;
     }
 
     select, textarea {
-        max-width: 300px;
-    }
-}
-
-@media (min-width: 768px) {
-    h1 {
-        font-size: 2em;
-    }
-
-    select, textarea {
-        max-width: 400px;
+        max-width: 250px;
     }
 }
