--- a/style.css
+++ b/style.css
@@ -21,6 +21,7 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
+    overflow: hidden;
 }
 
 .principalText{
@@ -28,7 +29,8 @@ body{
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    margin: 20px;
+    margin-bottom: 20px;
+    margin-top: 10px;
 }
 
 img{
